# godot-cxx-ez-setup

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exe.bat
other/: GDExtensionModule.gdextension
